[package]
name = "nodio-win32"
version = "0.1.0"
edition = "2021"

[dependencies]
nodio-core = { path = "../nodio-core" }

widestring = "1.0.0-beta.1"
log = "0.4.17"
notify-thread = { git = "https://github.com/urholaukkarinen/notify-thread.git" }
pollster = "0.2.5"
parking_lot = { version = "0.12.0", features = ["deadlock_detection"] }

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "interface",
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_System_WinRT",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
]